--- a/ref.bib
+++ b/ref.bib
@@ -99,4 +99,13 @@
   keywords = {abalone,ai,ai-battle-game,artificial-intelligence,game,machine-learning,python,python3}
 }
 
+@misc{towzeur_towzeurgym-abalone_2021,
+  title = {Towzeur/Gym-Abalone},
+  author = {{towzeur}},
+  year = {2021},
+  month = jan,
+  abstract = {An environment of the board game Abalone using OpenAI's Gym API},
+  keywords = {abalone,gym,open-ai,reinforcement-learning}
+}
+
 
