--- a/ref.bib
+++ b/ref.bib
@@ -24,7 +24,7 @@
   year = {2009},
   file = {/home/ture/Zotero/storage/YY9WTM47/Chorus - 2009 - Implementing a computer player for abalone using a.pdf},
   school = {Citeseer},
-  type = {{{PhD Thesis}}}
+  type = {Master {{Thesis}}}
 }
 
 @inproceedings{lemmens_constructing_2005,
@@ -36,7 +36,7 @@
   file = {/home/ture/Zotero/storage/9ME8UC3J/Lemmens - 2005 - Constructing an abalone game-playing agent.pdf}
 }
 
-@article{noauthor_abalone_2020,
+@misc{noauthor_abalone_2020,
   title = {Abalone (Board Game)},
   year = {2020},
   month = dec,
@@ -44,6 +44,7 @@
   annotation = {Page Version ID: 994557581},
   copyright = {Creative Commons Attribution-ShareAlike License},
   file = {/home/ture/Zotero/storage/5H8G9LDZ/index.html},
+  howpublished = {https://en.wikipedia.org/w/index.php?title=Abalone\_(board\_game)\&oldid=994557581},
   journal = {Wikipedia},
   language = {en}
 }
@@ -51,10 +52,7 @@
 @misc{noauthor_peer_nodate,
   title = {Peer {{Sommerlund}} / Haliotis},
   abstract = {Abalone board game library},
-  file = {/home/ture/Zotero/storage/S3KRSZD7/haliotis.html},
-  howpublished = {https://gitlab.com/peer.sommerlund/haliotis},
-  journal = {GitLab},
-  language = {en}
+  file = {/home/ture/Zotero/storage/S3KRSZD7/haliotis.html}
 }
 
 @misc{noauthor_red_nodate,
@@ -74,6 +72,17 @@
   month = jan,
   abstract = {Forming winning strategies for board games requires good heuristics and fast search algorithms on game trees. High branching factors and the need for looking deeper in game trees are overwhelming, even for today's high performance PC's. Therefore, better game-plays are only available with better algorithms and heuristics for an ordinary player, not with faster machines. Abalone is a recent two-person strategy game. Initial evaluations point out that the branching factor is larger than the chess. In this paper, a new heuristic used by a simple intelligent agent for playing Abalone game, named as ABLA is introduced. ABLA's performance is promising as compared to existing computerized Abalone players.},
   file = {/home/ture/Zotero/storage/Y8U7NXW8/Özcan and Hulagu - 2004 - A Simple Intelligent Agent for Playing Abalone Gam.pdf}
+}
+
+@article{papadopoulos_exploring_2012,
+  title = {Exploring {{Optimization Strategies}} in {{Board Game Abalone}} for {{Alpha}}-{{Beta Search}}},
+  author = {Papadopoulos, Athanasios and Toumpas, Konstantinos and Chrysopoulos, Antonios and Mitkas, Pericles A},
+  year = {2012},
+  pages = {8},
+  abstract = {This paper discusses the design and implementation of a highly efficient MiniMax algorithm for the game Abalone. For perfect information games with relatively low branching factor for their decision tree (such as Chess, Checkers etc.) and a highly accurate evaluation function, Alpha-Beta search proved to be far more efficient than Monte Carlo Tree Search. In recent years many new techniques have been developed to improve the efficiency of the Alpha-Beta tree, applied to a variety of scientific fields. This paper explores several techniques for increasing the efficiency of Alpha-Beta Search on the board game of Abalone while introducing some new innovative techniques that proved to be very effective. The main idea behind them is the incorporation of probabilistic features to the otherwise deterministic AlphaBeta search.},
+  file = {/home/ture/Zotero/storage/6NQG9BJM/Papadopoulos et al. - 2012 - Exploring Optimization Strategies in Board Game Ab.pdf},
+  journal = {IEEE Conference on Computational Intelligence and Games},
+  language = {en}
 }
 
 @book{russell_artificial_2021,
